@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.playlist.o2tv" name="Playlist O2TV" version="0.6.2" provider-name="JiRo, úprava addon Štěpána Orta">
+<addon id="service.playlist.o2tv" name="Playlist O2TV" version="0.6.3" provider-name="JiRo, úprava addon Štěpána Orta">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.module.requests" version="2.20.0"/>
@@ -11,6 +11,10 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <news>
+2019-10-01 [0.6.3]
+* Fixed Libreelec compatibility (incomplete future module)
+* Use utf-8 encoding on file operations
+
 2019-09-28 [0.6.2]
 * Python 3 / unicode support
 * Fixed error on no channels returned [NoChannelsError]
